# betterfactory_lidar_firos

./: .gitignore  .gitmodules  .rosinstall  .rosinstall.bak  README.md  betterfactory_lidar_firos.rosinstall
betterfactory_bringup/: CMakeLists.txt  package.xml
betterfactory_bringup/config/: visualization.rviz
betterfactory_bringup/launch/: firos_bringup.launch
docker/: Dockerfile  docker-compose.yml
docker/docker-config/: config.json  topics.json
firos_lidar_bringup/: CMakeLists.txt  package.xml
firos_lidar_bringup/config/: config.json  topics.json
firos_lidar_bringup/launch/: firos_bringup.launch  lidar_bringup.launch  lidar_visualize.launch
